--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="btnFoto">Abrir camera</string>
     <string name="lblName">Estado Permiso</string>
     <string name="lblCamera">Camara Selección</string>
-    <string name="access_token" />
+    <string name="access_token" >sk.eyJ1IjoiZWR3YXJkc3Rhcm90aDEyNDUiLCJhIjoiY2tpMWFtMzN2MDFzZDJxcDljaG84NDQ0YSJ9.m87JOsggUxGM1mM0ayEH4g</string>>
     <string name="selected_place_info" />
 
 </resources>
