--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,17 @@
     <string name="btnFoto">Abrir camera</string>
     <string name="lblName">Estado Permiso</string>
     <string name="lblCamera">Camara Selección</string>
-    <string name="access_token" >sk.eyJ1IjoiZWR3YXJkc3Rhcm90aDEyNDUiLCJhIjoiY2tpMWFtMzN2MDFzZDJxcDljaG84NDQ0YSJ9.m87JOsggUxGM1mM0ayEH4g</string>>
+    <string name="access_token">sk.eyJ1IjoiZWR3YXJkc3Rhcm90aDEyNDUiLCJhIjoiY2tpMWFtMzN2MDFzZDJxcDljaG84NDQ0YSJ9.m87JOsggUxGM1mM0ayEH4g</string>
+    >
     <string name="selected_place_info" />
+    <string name="title_activity_llamada_directa">llamadaDirectaActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
 </resources>
