--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,11 @@
 <resources>
+    <string name="access_token">pk.eyJ1IjoiZWR3YXJkc3Rhcm90aDEyNDUiLCJhIjoiY2tpMTltNjM0MTMyYjJ4cGRqd2IzcWx4ZCJ9.4Kz4Dg79YratofmHJ0Ekfg</string>
+
     <string name="app_name">Fem Taxi</string>
 
     <string name="btnFoto">Abrir camera</string>
     <string name="lblName">Estado Permiso</string>
     <string name="lblCamera">Camara Selección</string>
-    <string name="access_token">sk.eyJ1IjoiZWR3YXJkc3Rhcm90aDEyNDUiLCJhIjoiY2tpMWFtMzN2MDFzZDJxcDljaG84NDQ0YSJ9.m87JOsggUxGM1mM0ayEH4g</string>
     >
     <string name="selected_place_info" />
     <string name="title_activity_llamada_directa">llamadaDirectaActivity</string>
